--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Klimb we find you the best job match"
+      content="web site to find jobs without trying"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <title>React App</title>
+    /> -->
+    <title>Klimb.ai | Let us do the climbing for you!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
